# regatta-tracker-observer

./: .dockerignore  .env.example  .gitignore  Dockerfile  meson.build  observer-openapi.yaml  startup.config
lua_scripts/: get_current_coordinates.lua
src/app/: main.cpp
src/platform/: ObserverFactory.h  ObserverServer.h  Utils.h
src/platform/Handlers/: CoordinatesHandler.cpp  CoordinatesHandler.h
subprojects/: rgt-devkit.wrap
